--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Yüklenme Ekranı end-->
     <!-- navbar -->
     <header>
-        <h1 class="logo">Bot Site Template</h1>
+        <h1 class="logo">Armis Bot Destek Sitesi</h1>
         <nav>
             <ul class="nav-area top-nav">
                 <li><a href="#top">Ana Sayfa</a></li>
